k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-posting-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-posting-service
  template:
    metadata:
      labels:
        app: job-posting-service
    spec:
      containers:
        - name: job-posting-service-container
          image: sarathdev/job-posting-service
          ports:
            - containerPort: 3000
