k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-posting-service
spec:
  selector:
    app: job-posting-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
