k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-posting-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: job.sarathraj.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-posting-service
                port:
                  number: 80
